1era entrega Oficial: Frontend Pantallas principales y componentes generales

--- a/main/src/profile_view.html
+++ b/main/src/profile_view.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
 
-
+    <!--Esta es la barra de navegación-->
         <div class="navbar">
                 <h1>My Michi</h1>
 
@@ -120,7 +120,8 @@
 </div>
 
     </div>
-    
+
+    <!--Este es el pie de página-->
     <footer>
         Diseñado y desarrollado por Ximena Rosales Velázquez
     </footer>
