--- a/main/src/register_view.html
+++ b/main/src/register_view.html
@@ -53,6 +53,7 @@
 <script src="main.js"></script>
 
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Kiwi+Maru&display=swap">
+<!--Este es el pie de página-->
 <footer>
     Diseñado y desarrollado por Ximena Rosales Velázquez
 </footer>
