--- a/main/src/feed_view.html
+++ b/main/src/feed_view.html
@@ -16,6 +16,8 @@
         <div class="border">
             <span>My Michi</span>
         </div>
+
+        <!--Esta es la barra de navegación-->
         <div class="navbar">
             <ul>
                 <li><a href="feed_view.html"><img src="../res/assets/home_icon.png">Inicio</a></li>
@@ -190,6 +192,7 @@
     <script src="../src/js/advanceSearch.js"></script>
     <script src="../src/js/createPublish.js"></script>
 
+    <!--Este es el pie de página-->
     <footer>
         Diseñado y desarrollado por Ximena Rosales Velázquez
     </footer>
